--- a/Views/NHANVIENs/Delete.cshtml
+++ b/Views/NHANVIENs/Delete.cshtml
@@ -13,7 +13,7 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.HOTENNV)
+            Tên nhân viên
         </dt>
 
         <dd>
@@ -21,79 +21,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.DIACHI)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.DIACHI)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.GIOITINH)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.GIOITINH)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.NGAYSINH)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.NGAYSINH)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.CMND)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.CMND)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.QUEQUAN)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.QUEQUAN)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.SDT)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.SDT)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.DANTOC)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.DANTOC)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.SOBH)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.SOBH)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.IMG_PATH)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.IMG_PATH)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.CHUCVU.TENCV)
+           Chức vụ
         </dt>
 
         <dd>
@@ -101,7 +29,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.PHONGBAN.TENPB)
+            Phòng ban
         </dt>
 
         <dd>
@@ -114,7 +42,7 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
+            <input type="submit" value="Delete" class="btn btn-default" style="color:black"/> |
             @Html.ActionLink("Back to List", "Index")
         </div>
     }
