--- a/Views/PHONGBANs/Details.cshtml
+++ b/Views/PHONGBANs/Details.cshtml
@@ -5,38 +5,10 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Details</h2>
-@*
-    <div>
-        <h4>PHONGBAN</h4>
-        <hr />
-        <dl class="dl-horizontal">
-            <dt>
-                @Html.DisplayNameFor(model => model.TENPB)
-            </dt>
+<h4 style="font-weight: 700; margin-bottom: 16px; text-align:center">Nhân viên phòng ban</h4>
 
-            <dd>
-                @Html.DisplayFor(model => model.TENPB)
-            </dd>
-
-            <dt>
-                @Html.DisplayNameFor(model => model.TRGPB)
-            </dt>
-
-            <dd>
-                @Html.DisplayFor(model => model.TRGPB)
-            </dd>
-
-        </dl>
-    </div>
-    <p>
-        @Html.ActionLink("Edit", "Edit", new { id = Model.MAPB }) |
-        @Html.ActionLink("Back to List", "Index")
-    </p>
-*@
 <p>
-    @*    @Html.ActionLink("Edit", "Edit", new { id  }) |*@
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Quay lại", "Index")
 </p>
 
 
@@ -76,7 +48,6 @@
         <th>
             @Html.DisplayNameFor(model => model.TenCV)
         </th>
-        <th></th>
     </tr>
 
 
