--- a/Views/PHONGBANs/Edit.cshtml
+++ b/Views/PHONGBANs/Edit.cshtml
@@ -36,7 +36,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 form-input">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Save" class="btn btn-default" style="color:black"/>
             </div>
         </div>
     </div>
