--- a/Views/NHANVIENs/Create.cshtml
+++ b/Views/NHANVIENs/Create.cshtml
@@ -79,8 +79,13 @@
 
                             <div class="form-group">
                                 <div class="form-title">Giới tính</div>
-                                <div class="form-input">
-                                    @Html.EditorFor(model => model.GIOITINH, new { htmlAttributes = new { @class = "form-control" } })
+                                <div class="form-input">  
+                                    <div class="editor-field">
+                                        @Html.DropDownList("Gender", new List<SelectListItem>{
+                                        new SelectListItem{ Text="Male", Value="Male"},
+                                        new SelectListItem{ Text="Female", Value="Female"}
+                                        })
+                                    </div>
                                     @Html.ValidationMessageFor(model => model.GIOITINH, "", new { @class = "text-danger" })
                                 </div>
                             </div>
