--- a/Views/NHANVIENs/Index.cshtml
+++ b/Views/NHANVIENs/Index.cshtml
@@ -29,8 +29,8 @@
 <div class="form-group">
     @using (Html.BeginForm())
     {
-        <p>
-            @Html.TextBox("SearchString")
+        <p>        
+            <input name="SearchString" type="text" placeholder="Nhập Mã NV | Tên NV" style="width: 300px; padding: 4px 10px;"/>
             <input type="submit" value="Search" class="btn btn-primary btn-xs" />
         </p>
     }
